--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="image-container">
                 <h3>Zaragoza</h3>
-                <img src="./assets/imgs/zaragoza.jpg" alt="Zaragoza">
+                <img src="./assets/imgs/zaragoza.jpg" alt="zaragoza">
                 <p>Zaragoza es conocida por su basílica y su arquitectura mudéjar, ofreciendo una experiencia cultural rica.</p>
             </div>
         </div>
